--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
