--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.20.0",
     "bent": "^7.3.10",
     "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "^8.10.0",
